--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,3 +1,4 @@
+{% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -26,7 +27,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    Soufianeeee
+    {% render_bundle 'main' %}
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
