--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,7 @@
     </noscript>
     <div id="root"></div>
     {% render_bundle 'main' %}
+    public/index
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
