--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,8 +9,8 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="static/manifest.json">
-    <link rel="shortcut icon" href="static/favicon.png">
+    <link rel="manifest" href="/static/bundles/manifest.json">
+    <link rel="shortcut icon" href="/static/bundles/favicon.png">
     <!--
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
       Notice the use of %PUBLIC_URL% in the tags above.
