--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     </head>
 
-    <body class="hold-transition skin-green-light sidebar-mini">
+    <body class="hold-transition skin-green fixed sidebar-mini">
         <noscript>
           You need to enable JavaScript to run this app.
         </noscript>
