--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,8 +6,8 @@
         <title>SentAd Media - Gradua| Home Page</title>
         <!-- Tell the browser to be responsive to screen width -->
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-        <!--<link rel="manifest" href="http://localhost:8000/manifest.json">
-        <link rel="shortcut icon" href="http://localhost:8000/favicon.ico">-->
+        <!--<link rel="manifest" href="http://localhost:8000/manifest.json">-->
+        <link rel="shortcut icon" href="favicon.png">
     </head>
 
     <body class="hold-transition skin-green fixed sidebar-mini">
