--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,8 +7,8 @@
         <!-- Tell the browser to be responsive to screen width -->
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         {% if DEV_MODE %}
-            <link rel="manifest" href="http://localhost:8000/static/bundles/manifest.json">
-            <link rel="shortcut icon" href="http://localhost:8000/static/bundles/favicon.png">
+            <link rel="manifest" href="http://localhost:8000/static/manifest.json">
+            <link rel="shortcut icon" href="http://localhost:8000/static/favicon.png">
         {% else %}
             <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
             <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
